--- a/ButterflySystem/ButterflySystems.CalculatorApi.csproj
+++ b/ButterflySystem/ButterflySystems.CalculatorApi.csproj
@@ -6,6 +6,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <PropertyGroup Condition=" '$(RunConfiguration)' == 'ButterflySystem' " />
   <ItemGroup>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
@@ -14,5 +15,11 @@
     <ProjectReference Include="..\ButterflySystems.Calculator.BLL\ButterflySystems.Calculator.BLL.csproj">
       <GlobalPropertiesToRemove></GlobalPropertiesToRemove>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Remove="DTO\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="DTO\" />
   </ItemGroup>
 </Project>
